# absdefint

./: .stylish-haskell.yaml  README.md  absdefint.cabal  stack.yaml
app/: Main.hs
lib/: Common.hs  Interpreter.hs  Syntax.hs
lib/Figures/: FiveSix.hs  Four.hs  One.hs  Seven.hs  Three.hs  Two.hs
test/: Eval1Spec.hs  Eval3Spec.hs  Eval4Spec.hs
