name:                absdefint
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/absdefint#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Figures.One
                       Figures.Two
                       Figures.Three
  ghc-options:         -Wall -Werror
  build-depends:       base
                     , mtl
                     , bound
                     , containers
                     , freer-simple
                     , recursion-schemes
                     , deriving-compat
  default-language:    Haskell2010
  default-extensions:  TypeApplications
                     , FlexibleContexts
                     , DataKinds
                     , MonoLocalBinds

test-suite absdefint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , absdefint
                     , hspec
                     , QuickCheck
  other-modules:       Eval1Spec
                     , Eval3Spec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/absdefint
